tests/baselines/reference/parserObjectCreationArrayLiteral3.errors.txt
tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral3.ts(1,5): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral3.ts(1,9): error TS1011: An element access expression should take an argument.


==== tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral3.ts (2 errors) ====
    new Foo[]();
        ~~~
!!! error TS2304: Cannot find name 'Foo'.
            
!!! error TS1011: An element access expression should take an argument.